[package]
name = "concord"
version = "0.1.0"
authors = ["Sasha Pourcelot <sasha.pourcelot@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
seahorse = "1.1"
home = "0.5"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"